Premiere fenetre avec label instruction et bouton passer - Ajout IGame, IHM, Game, GameService, GameView, style.css et main.fxml